# agora

./: Makefile  README.fr.md  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  epic.yml  feature_request.yml  subtask.yml
.github/workflows/: ci.yml
agora/: chunking.py  retrieval.py  util.py
agora/cli/: config.py  ingest.py
agora/embeddings/: remote.py
agora/sources/: loader.py  markdown_source.py  registry.py
agora/sources/models/: base.py  markdown_repo.py
agora/tests/: test_cli_ingest_parse.py  test_markdown_repo_source.py  test_registry.py  test_sources_loader.py
agora/vectorstores/: qdrant_store.py
docs/: index.fr.md  index.md
ragnar/cli/: ingest.py
ragnar/templates/: sources.example.yaml
