[project]
name = "agora"
version = "0.3"
requires-python = ">=3.10"
description = "RAG ingestion CLI for CanaR"
readme = "README.md"

dependencies = [
  "qdrant-client>=1.9.0",
  "markdown-it-py>=3.0.0",
  "PyYAML>=6.0.1",
  "numpy>=1.26.0",
  "requests>=2.31.0",
  "tiktoken>=0.7.0",
  "python-dotenv>=1.0",
  "tqdm>=4.66",
  "pydantic>=2.6,<3.0",
]

[project.scripts]
agora-ingest = "agora.cli.ingest:main"
agora-config = "agora.cli.config:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agora*"]

[tool.setuptools.package-data]
agora = ["templates/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]